--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -80,7 +80,7 @@
     "os.environ['AWS_SECRET_ACCESS_KEY'] = 'minio_pwd'\n",
     "\n",
     "# connect to mlflow\n",
-    "mlflow.set_tracking_uri(\"http://10.43.101.154/:8083\")\n",
+    "mlflow.set_tracking_uri(\"http://10.43.101.154:8083\")\n",
     "mlflow.set_experiment(\"gradient_boosting_covertype\")\n",
     "mlflow.sklearn.autolog(log_model_signatures=True, log_input_examples=True, registered_model_name=\"final_model\")\n",
     "\n",
