Fix start_run parameters

--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -85,7 +85,7 @@
     "mlflow.sklearn.autolog(log_model_signatures=True, log_input_examples=True, registered_model_name=\"final_model\")\n",
     "\n",
     "# mlflow run\n",
-    "with mlflow.start_run(run_name=\"gradient_boosting_training\", desc=\"Train gradient boosting model\") as run:\n",
+    "with mlflow.start_run(run_name=\"gradient_boosting_training\", description=\"Train gradient boosting model\") as run:\n",
     "    # fit model to data\n",
     "    model.fit(X, y)"
    ]
